macosx: actually deploying a callback helps if you are interested in the info it gives (refs [#9960](https://code.videolan.org/videolan/vlc/-/issues/9960))
That commit is only in version 2.2.0 and later. It cannot account for a bug in 2.0.8...
Absolutely true. The issue here is not the core or the http access module, but the interfaces, which aren't listening to the correct events. This was resolved in my commit above for the Mac interface, but still lacks addressing on Qt.
Fix broken NowPlaying (close [#9960](https://code.videolan.org/videolan/vlc/-/issues/9960), [#11796](https://code.videolan.org/videolan/vlc/-/issues/11796), [#12850](https://code.videolan.org/videolan/vlc/-/issues/12850))Prevent the es_out from overriding the NowPlaying state by splittingthe meta into NowPlaying and ESNowPlaying.The function input_item_GetNowPlayingFb can be used to return thepreferred meta value.