Qt: correctly update the nowplaying info

Close #9960